<resources>
    <string name="app_name">Ass1(Final)</string>
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_email">Enter your email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="create_new_account">Sign up</string>
    <string name="logout">logout</string>
    <string name="register_here">Register here!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="register">Register</string>

</resources>