<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="167dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="30dp"
        android:text="@string/register_here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="215dp"
        android:layout_marginBottom="30sp"
        android:src="@drawable/register"
        />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />
    <EditText
        android:id="@+id/editTextTextPersonEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextTextPersonCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:text="@string/country" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="30sp"
        android:text="@string/register" />


</LinearLayout>